add required files for running app on heroku

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 A simple application structured following the MVC pattern using Flask micro python framework.
 It basically here to be my base skeleton for new python web applications
 
+Demo : http://cold-leaf-6227.herokuapp.com/
+
 To run,
 cd flask-mvc
 python runserver.py
